# Systematicon

include/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h
libs/glad/: glad.c  glad.h
src/: CMakeLists.txt  GUI.cpp  GUI.h  GraphicsEngine.h  SimulationHandler.cpp  SimulationHandler.h  main.cpp
src/resources/: vScene.vert
